# BCI

./: COMPLETE_GUIDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
acquisition/: electrode_impedance.py  lsl_streamer.py  openbci_board.py  signal_quality.py  simulator.py
api/: main.py  websocket_handler.py
dashboard/: app.py  brainviz_3d.py  callbacks.py  eeg_plot.py  layout.py  neurofeedback_panel.py
database/: crud.py  init_db.py  models.py  session.py
devices/: eye_tracker.py  multimodal_fusion.py  prosthetic_servo.py  ros_controller.py  safety_watchdog.py  tts_engine.py  wheelchair_driver.py
docs/: CHANGELOG.md  api_reference.md  architecture.md  deployment_guide.md  fda510k_pathway.md  ieee2857_compliance.md  iso14155_validation.md  risk_matrix.md
dsp/: asr_cleaning.py  bandpass_filter.py  epoch_extraction.py  feature_vector.py  gnu_radio_flowgraph.grc  ica_artifact_removal.py  notch_filter.py  pipeline.py
logs/: iso14155_validation_report.txt
ml/: adaptive_calibration.py  cnn_model.py  data_loader.py  eegnet_model.py  evaluate.py  model_registry.py  predict.py  sklearn_baseline.py  train.py  transfer_learning.py
neurofeedback/: adaptive_difficulty.py  band_power.py  feedback_engine.py  gamification.py  session_tracker.py
resilience/: classifier_fallback.py  eeg_loss_handler.py  incident_response.py  kafka_failover.py  safe_state.py
scripts/: benchmark_latency.py  demo_simulation.py  generate_certs.sh  run_pipeline.py  setup_kafka.sh  validate_iso14155.py
security/: aes_encryption.py  audit_logger.py  (+5 more)
(+26 files in other folders)
