[project]
name = "bci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.19.0",
    "alembic>=1.12.0",
    "black>=23.0.0",
    "boto3>=1.28.0",
    "confluent-kafka>=2.3.0",
    "cryptography>=41.0.0",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "diffprivlib>=0.6.4",
    "faker>=19.0.0",
    "fastapi>=0.104.0",
    "flake8>=6.1.0",
    "httpx>=0.25.0",
    "joblib>=1.3.0",
    "kafka-python>=2.0.2",
    "loguru>=0.7.2",
    "mne>=1.5.0",
    "mypy>=1.6.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "plotly>=5.18.0",
    "pre-commit>=3.5.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "pylsl>=1.16.0",
    "pyserial>=3.5",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "pyttsx3>=2.90",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "sqlalchemy>=2.0.0",
    "tensor>=0.3.6",
    "tensorflow>=2.14.0",
    "torch>=2.1.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]
